--- a/src/test/resources/application.properties.properties
+++ b/src/test/resources/application.properties.properties
@@ -1,18 +1,14 @@
-# H2 properties
-spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+# Database connection properties
+spring.datasource.url=jdbc:postgresql://localhost:5432/market_connect
+spring.datasource.username=developer
+spring.datasource.password=developer
+spring.datasource.driver-class-name=org.postgresql.Driver
 
+# JPA properties
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Logging properties
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-# Email Settings
-spring.mail.host=mailslurp.mx
-spring.mail.port=2587
-spring.mail.username=
-spring.mail.password=
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
